--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.18.7",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-jslint": "^1.0.10",
     "gulp-uglify": "^2.0.1"
